# rootward

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: README.md  catalog.adoc  package.json  pnpm-lock.yaml
docs/books/06-rootward-project-cli-contract/: book.adoc
docs/books/06-rootward-project-cli-contract/frontmatter/: preface.adoc
docs/scripts/: add-home-links.mjs  build-adoc.mjs  build-books.mjs  check-html-local-resources.mjs  copy-assets.mjs  create-index.mjs
docs/shared/: attributes.adoc
docs/test/: add-home-links.test.mjs  build-adoc.test.mjs  build-books.test.mjs  check-html-local-resources.test.mjs  copy-assets.test.mjs  create-index.test.mjs
scripts/: check-rust-template.mjs  check-versions.mjs  release-notes.mjs  smoke-creator-rust.mjs
templates/go/: manifest.json
templates/python/: manifest.json
templates/rust/: manifest.json
templates/rust/template/: .gitignore  Cargo.toml  README.md
templates/rust/template/src/: cli.rs  lib.rs  main.rs
templates/rust/template/src/commands/: config_print.rs  discover.rs  doctor.rs  init.rs  mod.rs  scan.rs  shared.rs  status.rs
templates/rust/template/src/core/: config.rs  constants.rs  discovery.rs  errors.rs  mod.rs  project.rs  result.rs  scanners.rs
templates/rust/template/src/io/: output.rs
templates/rust/template/tests/: cli_contract.rs
templates/typescript/: manifest.json
templates/typescript/template/: README.md  package.json  tsconfig.json  tsdown.config.ts
(+62 files in other folders)
