[package]
name = "rootward_token_crate_name"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "rootward_token_crate_module_name"
path = "src/lib.rs"

[[bin]]
name = "rootward-token-bin-name"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
ignore = "0.4"
globset = "0.4"
camino = { version = "1", features = ["serde1"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
